fix currency selector going behind "preorder" banner

--- a/src/pages/Content/content.styles.scss
+++ b/src/pages/Content/content.styles.scss
@@ -98,6 +98,8 @@
       border: 1px solid #E8E8E8;
       width: 100%;
       margin-top: 40px;
+      position: relative;
+      z-index: 14;
     }
 
     &_row {
